Removing JPA dependency on JBoss VFS