@@ -17,7 +17,6 @@
 package org.jboss.as.jpa.hibernate5.scan;
 
 import java.io.BufferedInputStream;
-import java.io.Closeable;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -66,8 +65,6 @@ import org.jboss.shrinkwrap.api.exporter.ExplodedExporter;
 import org.jboss.shrinkwrap.api.exporter.ZipExporter;
 import org.jboss.shrinkwrap.api.spec.JavaArchive;
 import org.jboss.shrinkwrap.api.spec.WebArchive;
-import org.jboss.vfs.VFS;
-import org.jboss.vfs.VirtualFile;
 
 import org.junit.After;
 import org.junit.Before;
@@ -416,31 +413,22 @@ public class ScannerTests {
 		assertEquals( 0, resultCollector.getPackageDescriptorSet().size() );
 		assertEquals( 0, resultCollector.getMappingFileSet().size() );
 	}
-
+8
 	@Test
 	public void testInputStreamZippedJar() throws Exception {
 		File defaultPar = buildDefaultPar();
 		addPackageToClasspath( defaultPar );
 
-		final VirtualFile virtualFile = VFS.getChild( defaultPar.getAbsolutePath() );
-		Closeable closeable = VFS.mountZip( virtualFile, virtualFile );
+        ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor( defaultPar.toURI().toURL() );
+        AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
+        archiveDescriptor.visitArchive(new AbstractScannerImpl.ArchiveContextImpl(
+                new PersistenceUnitDescriptorAdapter(),
+                true,
+                resultCollector
+            )
+	    );
 
-		try {
-			ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor( defaultPar.toURI().toURL() );
-			AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
-			archiveDescriptor.visitArchive(
-					new AbstractScannerImpl.ArchiveContextImpl(
-							new PersistenceUnitDescriptorAdapter(),
-							true,
-							resultCollector
-					)
-			);
-
-			validateResults( resultCollector, ApplicationServer.class, Version.class );
-		}
-		finally {
-			closeable.close();
-		}
+		validateResults( resultCollector, ApplicationServer.class, Version.class );
 	}
 
 	private void validateResults(AbstractScannerImpl.ResultCollector resultCollector, Class... expectedClasses) throws IOException {
@@ -468,60 +456,36 @@ public class ScannerTests {
 		File nestedEar = buildNestedEar( defaultPar );
 		addPackageToClasspath( nestedEar );
 
-		final VirtualFile nestedEarVirtualFile = VFS.getChild( nestedEar.getAbsolutePath() );
-		Closeable closeable = VFS.mountZip( nestedEarVirtualFile, nestedEarVirtualFile );
+		ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor(
+            new URL("jar:" + nestedEar.toURI().toURL().toString() + "!/defaultpar.par")
+	    );
 
-		try {
-			VirtualFile parVirtualFile = nestedEarVirtualFile.getChild( "defaultpar.par" );
-			Closeable closeable2 = VFS.mountZip( parVirtualFile, parVirtualFile );
-			try {
-				ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor( parVirtualFile.toURL() );
+		AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
+		archiveDescriptor.visitArchive(
+				new AbstractScannerImpl.ArchiveContextImpl(
+						new PersistenceUnitDescriptorAdapter(),
+						true,
+						resultCollector
+				)
+		);
 
-				AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
-				archiveDescriptor.visitArchive(
-						new AbstractScannerImpl.ArchiveContextImpl(
-								new PersistenceUnitDescriptorAdapter(),
-								true,
-								resultCollector
-						)
-				);
-
-				validateResults( resultCollector, ApplicationServer.class, Version.class );
-			}
-			finally {
-				closeable2.close();
-			}
-		}
-		finally {
-			closeable.close();
-		}
+		validateResults( resultCollector, ApplicationServer.class, Version.class );
 
 		File nestedEarDir = buildNestedEarDir( defaultPar );
-		final VirtualFile nestedEarDirVirtualFile = VFS.getChild( nestedEarDir.getAbsolutePath() );
 
-		try {
-			VirtualFile parVirtualFile = nestedEarDirVirtualFile.getChild( "defaultpar.par" );
-			closeable = VFS.mountZip( parVirtualFile, parVirtualFile );
-			try {
-				ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor( parVirtualFile.toURL() );
-				AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
-				archiveDescriptor.visitArchive(
-						new AbstractScannerImpl.ArchiveContextImpl(
-								new PersistenceUnitDescriptorAdapter(),
-								true,
-								resultCollector
-						)
-				);
+		ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor(
+	        new URL("jar:" + nestedEarDir.toURI().toURL().toString() + "!/defaultpar.par")
+	    );
+		AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
+		archiveDescriptor.visitArchive(
+	            new AbstractScannerImpl.ArchiveContextImpl(
+                        new PersistenceUnitDescriptorAdapter(),
+                        true,
+						resultCollector
+	            )
+	    );
 
-				validateResults( resultCollector, ApplicationServer.class, Version.class );
-			}
-			finally {
-				closeable.close();
-			}
-		}
-		finally {
-			closeable.close();
-		}
+		validateResults( resultCollector, ApplicationServer.class, Version.class );
 	}
 
 	@Test
@@ -529,32 +493,24 @@ public class ScannerTests {
 		File war = buildWar();
 		addPackageToClasspath( war );
 
-		final VirtualFile warVirtualFile = VFS.getChild( war.getAbsolutePath() );
-		Closeable closeable = VFS.mountZip( warVirtualFile, warVirtualFile );
+		ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor(
+		    war.toURI().toURL()
+		);
 
-		try {
-			ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor(
-					warVirtualFile.toURL()
-			);
+		AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
+		archiveDescriptor.visitArchive(
+				new AbstractScannerImpl.ArchiveContextImpl(
+						new PersistenceUnitDescriptorAdapter(),
+						true,
+						resultCollector
+				)
+		);
 
-			AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
-			archiveDescriptor.visitArchive(
-					new AbstractScannerImpl.ArchiveContextImpl(
-							new PersistenceUnitDescriptorAdapter(),
-							true,
-							resultCollector
-					)
-			);
-
-			validateResults(
-					resultCollector,
-					org.hibernate.jpa.test.pack.war.ApplicationServer.class,
-					org.hibernate.jpa.test.pack.war.Version.class
-			);
-		}
-		finally {
-			closeable.close();
-		}
+		validateResults(
+				resultCollector,
+				org.hibernate.jpa.test.pack.war.ApplicationServer.class,
+				org.hibernate.jpa.test.pack.war.Version.class
+		);
 	}
 
 	@Test
@@ -562,28 +518,20 @@ public class ScannerTests {
 		File defaultPar = buildDefaultPar();
 		addPackageToClasspath( defaultPar );
 
-		final VirtualFile virtualFile = VFS.getChild( defaultPar.getAbsolutePath() );
-		Closeable closeable = VFS.mountZip( virtualFile, virtualFile );
+		ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor(
+			defaultPar.toURI().toURL()
+		);
 
-		try {
-			ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor(
-					virtualFile.toURL()
-			);
+		AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
+		archiveDescriptor.visitArchive(
+				new AbstractScannerImpl.ArchiveContextImpl(
+						new PersistenceUnitDescriptorAdapter(),
+						true,
+						resultCollector
+				)
+		);
 
-			AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
-			archiveDescriptor.visitArchive(
-					new AbstractScannerImpl.ArchiveContextImpl(
-							new PersistenceUnitDescriptorAdapter(),
-							true,
-							resultCollector
-					)
-			);
-
-			validateResults( resultCollector, ApplicationServer.class, Version.class );
-		}
-		finally {
-			closeable.close();
-		}
+		validateResults( resultCollector, ApplicationServer.class, Version.class );
 	}
 
 	@Test
@@ -591,15 +539,8 @@ public class ScannerTests {
 		File explodedPar = buildExplodedPar();
 		addPackageToClasspath( explodedPar );
 
-		String dirPath = explodedPar.getAbsolutePath();
-		if ( dirPath.endsWith( "/" ) ) {
-			dirPath = dirPath.substring( 0, dirPath.length() - 1 );
-		}
-
-		final VirtualFile virtualFile = VFS.getChild( dirPath );
-
 		ArchiveDescriptor archiveDescriptor = VirtualFileSystemArchiveDescriptorFactory.INSTANCE.buildArchiveDescriptor(
-				virtualFile.toURL()
+			explodedPar.toURI().toURL()
 		);
 
 		AbstractScannerImpl.ResultCollector resultCollector = new AbstractScannerImpl.ResultCollector( new StandardScanOptions() );
